# ugc_sprint_1

./: .env.example  .env.local.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yaml  entrypoint.sh  formalization_events.txt  main.py  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
assets/: formalization_events.txt  Требования к системе.docx
data/node2/: users.xml
etl/: .env.example  .env.local.example  Dockerfile  clickhouse.py  config.py  extractors.py  loaders.py  logger.py  main.py  models.py  requirements.txt  transformers.py
generator_events/: events.py  generate_to_db.py  jwt.py  jwt_utils.py  send_to_ugc.py
src/: entrypoint.sh  main.py
src/api/: error_handling.py  healtcheck.py  router.py
src/api/v1/: events.py  router.py
src/core/: config.py  logger.py
src/models/: event.py
src/repositories/: event.py
src/schemas/: events.py
src/services/: event.py
src/utils/: auth.py
test_clickhouse/: check_clickhouse.py  result.md
test_db/test_clickhouse/: check_clickhouse.py  result.md
test_db/test_clickhouse/clickhouse/: docker-compose.yml
test_db/test_utils/: utils.py
test_db/test_vertica/: config.py  docker-compose.yml  main.py
test_utils/: utils.py
test_vertica/: .env_example  config.py  docker-compose.yml  main.py  result.md
tests/: conftest.py  pytest.ini  test_settings.py
tests/functional/: test_event.py
tests/test_data/: event.py
