[tool.poetry]
name = "ugc-service"
version = "0.1.0"
description = "Online cinema UGC service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.poetry.dependencies]
python = "^3.10"
flask = { extras = ["async"], version = "^3.0.3" }
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
orjson = "^3.10.6"
aiokafka = "^0.11.0"
flask-openapi3 = { extras = ["async"], version = "^3.1.3" }
vertica-python = "^1.3.8"
pytest = "^6.1.2"
aiohttp = "^3.7.2"
asyncio = "3.4.3"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.12.0"
clickhouse-driver = "^0.2.8"
requests = "^2.32.3"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = { extras = ["gevent"], version = "^22.0.0" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
faker = "^26.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
